--- a/package.json
+++ b/package.json
@@ -17,9 +17,7 @@
     "react-google-login": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
-    "socket.io": "2.0.4"
-  },
-  "devDependencies": {
+    "socket.io": "2.0.4",
     "babel-plugin-import": "^1.12.0",
     "customize-cra": "^0.5.0",
     "less": "^3.10.2",
@@ -27,6 +25,7 @@
     "node-sass": "^4.12.0",
     "react-app-rewired": "^2.1.3"
   },
+  "devDependencies": {},
   "scripts": {
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
